--- a/package.json
+++ b/package.json
@@ -24,6 +24,17 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "keywords": [
+    "react",
+    "redux",
+    "redux-toolkit",
+    "react-redux",
+    "react-router-dom",
+    "axios",
+    "bootstrap",
+    "react-bootstrap",
+    "react-icons"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
